Bug 1481139 - Fix GMP process IPC channel error on Android. r=jld, r=njn, a=RyanVM