dom/media/gmp/GMPProcessParent.cpp
@@ -24,6 +24,7 @@ using std::string;
 using mozilla::gmp::GMPProcessParent;
 using mozilla::ipc::GeckoChildProcessHost;
 
+static const int kInvalidFd = -1;
 namespace mozilla {
 namespace gmp {
 
@@ -75,6 +76,12 @@ GMPProcessParent::Launch(int32_t aTimeoutMs)
   args.push_back(WideToUTF8(wGMPPath));
 #else
   args.push_back(mGMPPath);
+#endif
+
+#ifdef MOZ_WIDGET_ANDROID
+  // Add dummy value for pref to the file descriptors remapping
+  // table. See bug 1440207 and 1481139.
+  AddFdToRemap(kInvalidFd, kInvalidFd);
 #endif
 
   return SyncLaunch(args, aTimeoutMs);
